cmake_minimum_required(VERSION 3.8)
project(cpp_nodes)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(message_filters REQUIRED)

add_executable(sync_node src/msg_sync_node.cpp)
ament_target_dependencies(sync_node
  rclcpp
  sensor_msgs
  nav_msgs
  message_filters
)

install(TARGETS sync_node
  DESTINATION lib/${PROJECT_NAME}
)

ament_package()
